# statismo

Examples/IV/: BasicSamplingExample.cxx  CMakeLists.txt  buildShapeModel.cpp
Representers/IV/: OpenInventorFile.cpp  OpenInventorFile.h  OpenInventorRepresenter.cpp  OpenInventorRepresenter.h  OpenInventorUtils.h  openinventorutils.cpp
